--- a/PersonalWebpage/personalwebpage.html
+++ b/PersonalWebpage/personalwebpage.html
@@ -14,6 +14,11 @@
 <body>
   <div class="wrapper">
     <h1>Sergio Velasco</h1>
+    <div class="nav menu">
+      <a  active href="/PersonalWebpage/personalwebpage.html">Home</a>
+      <a href="/PersonalWebpage/about-me.html">About Me</a>
+      <a href="/PersonalWebpage/contact-me.html">Contact Me</a>
+    </div>
 
     <div class="grid-container">
       <header class="header">
