--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <h1>Sergio Velasco</h1>
     <div class="nav menu">
-      <a  active href="/personalwebpage.html">Home</a>
+      <a  active href="/index.html">Home</a>
       <a href="/about-me.html">About Me</a>
       <a href="/contact-me.html">Contact Me</a>
     </div>
