--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" size="16x16" href="/Media/favicon-16x16.png">
-  <link rel="stylesheet" href="/CSS/webpage.css">
+  <link rel="icon" type="image/png" size="16x16" href="Media/favicon-16x16.png">
+  <link rel="stylesheet" href="CSS/webpage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <title>Project</title>
 </head>
@@ -15,9 +15,9 @@
   <div class="wrapper">
     <h1>Sergio Velasco</h1>
     <div class="nav menu">
-      <a  active href="/index.html">Home</a>
-      <a href="/about-me.html">About Me</a>
-      <a href="/contact-me.html">Contact Me</a>
+      <a  active href="index.html">Home</a>
+      <a href="about-me.html">About Me</a>
+      <a href="contact-me.html">Contact Me</a>
     </div>
 
     <div class="grid-container">
@@ -30,7 +30,7 @@
       </header>
       <main class="main">
         <h2>About Me</h2>
-        <p><img src="/Media/img_0267_720.jpg" alt="picture of me">My name is Sergio Velasco, I was born in South America but
+        <p><img src="Media/img_0267_720.jpg" alt="picture of me">My name is Sergio Velasco, I was born in South America but
           moved to
           Miami, FL and raised there until I went to college in Gainesville, FL. Go Gators! I graduated from college
           with a
@@ -86,25 +86,25 @@
         <table>
           <tr>
             <td><a href="https://www.linkedin.com/in/sergio-velasco-a51367113" target="_blank"
-                alt="link to LinkedIn"><img src="/Media/linkedin.png" id="social" alt="linkedin icon"
+                alt="link to LinkedIn"><img src="Media/linkedin.png" id="social" alt="linkedin icon"
                   style="width: 50px; height: 50px; background-color: white;"></a>
             </td>
           </tr>
           <tr>
             <td><a href="https://twitter.com/sirgeeeoh" target="_blank" alt="link to twitter profile"><img
-                  src="/Media/twitter.png" id="social" alt="twitter icon"
+                  src="Media/twitter.png" id="social" alt="twitter icon"
                   style="width: 50px; height: 50px; background-color: white;"></a>
             </td>
           </tr>
           <tr>
             <td><a href="https://www.instagram.com/sergpiece/" target="_blank" alt="link to instagram profile"><img
-                  src="/Media/instagram.png" id="social" alt="instagram icon"
+                  src="Media/instagram.png" id="social" alt="instagram icon"
                   style="width: 50px; height: 50px; background-color: white;"></a>
             </td>
           </tr>
           <tr>
             <td><a href="https://www.twitch.tv/sergpiece" target="_blank" alt="link to twitch profile"><img
-                  src="/Media/twitch.png" id="social" alt="twitch icon"
+                  src="Media/twitch.png" id="social" alt="twitch icon"
                   style="width: 50px; height: 50px; background-color: white;"></a>
             </td>
           </tr>
