--- a/about-me.html
+++ b/about-me.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" size="16x16" href="/Media/favicon-16x16.png">
-    <link rel="stylesheet" href="/CSS/webpage.css">
+    <link rel="icon" type="image/png" size="16x16" href="Media/favicon-16x16.png">
+    <link rel="stylesheet" href="CSS/webpage.css">
     <title>About Me</title>
 </head>
 <body>
     <div class="nav menu">
-        <a  active href="..//index.html">Home</a>
-        <a href="..//about-me.html">About Me</a>
-        <a href="..//contact-me.html">Contact Me</a>
+        <a  active href="../index.html">Home</a>
+        <a href="../about-me.html">About Me</a>
+        <a href="../contact-me.html">Contact Me</a>
     </div>
     <h1>About Me</h1>
-    <img src="/Media/img_0434_720.jpg" alt="pictue of everybody">
+    <img src="Media/img_0434_720.jpg" alt="pictue of everybody">
     
 </body>
 </html>
