--- a/about-me.html
+++ b/about-me.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="nav menu">
-        <a  active href="../index.html">Home</a>
-        <a href="../about-me.html">About Me</a>
-        <a href="../contact-me.html">Contact Me</a>
+        <a  active href="./index.html">Home</a>
+        <a href="./about-me.html">About Me</a>
+        <a href="./contact-me.html">Contact Me</a>
     </div>
     <h1>About Me</h1>
     <img src="Media/img_0434_720.jpg" alt="pictue of everybody">
