--- a/contact-me.html
+++ b/contact-me.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" size="16x16" href="Media/favicon-16x16.png">
-    <link rel="stylesheet" href="CSS/webpage.css">
+    <link rel="stylesheet" href="/CSS/webpage.css">
     <title>Contact Me</title>
 </head>
 <body>
     <div class="nav menu">
-        <a  active href=".PersonalWebapge/index.html">Home</a>
-        <a href=".PersonalWebapge/about-me.html">About Me</a>
-        <a href=".PersonalWebapge/contact-me.html">Contact Me</a>
+        <a  active href="/index.html">Home</a>
+        <a href="/about-me.html">About Me</a>
+        <a href="/contact-me.html">Contact Me</a>
     </div>
     <h1>Contact Me</h1>
 </body>
