--- a/contact-me.html
+++ b/contact-me.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="nav menu">
-        <a  active href="./index.html">Home</a>
-        <a href="./about-me.html">About Me</a>
-        <a href="/contact-me.html">Contact Me</a>
+        <a href="index.html">Home</a>
+        <a href="about-me.html">About Me</a>
+        <a active href="contact-me.html">Contact Me</a>
     </div>
     <h1>Contact Me</h1>
 </body>
