--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
         <a href="index.html">Home</a>
         <a href="about-me.html" class="active">About Me</a>
         <a href="contact-me.html">Contact Me</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
           </a>
     </div>
@@ -43,7 +43,7 @@
             <h2>My Treasure Vault</h2>
 
                 <div id="slider">
-                    <img src="Media/img_0267_720.jpg" class="active1" alt="img 1">
+                    <img src="Media/img_0267_720.jpg" alt="img 1">
                     <img src="Media/img_0434_720.jpg" alt="img 2">
                     <img src="Media/IMG_0080.JPG" alt="img 3">
                     <img src="Media/IMG_0082.jpg" alt="img 4">
@@ -65,7 +65,6 @@
     </main>
 </div>
 
-    <script> src= "Javascript/webpage.js"</script>
-    
+<script src="./script/webpage.js"></script>
 </body>
 </html>
