--- a/contact-me.html
+++ b/contact-me.html
@@ -15,7 +15,7 @@
         <a href="index.html">Home</a>
         <a href="about-me.html">About Me</a>
         <a href="contact-me.html" class="active">Contact Me</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
           </a>
     </div>
@@ -53,6 +53,6 @@
             style="width: 60px; height: 60px; background-color: white;"></a>
     </div>
     
-    <script> src= ".Javascript/webpage.js"</script>
+    <script src="./script/webpage.js"></script>
 </body>
 </html>
