--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </footer>
     </div>
   </div>
-  <script> src="Javascript/webpage.js"</script>
+  <script src="./script/webpage.js"></script>
 </body>
 
 </html>
