--- a/about-me.html
+++ b/about-me.html
@@ -20,8 +20,9 @@
           </a>
     </div>
 
-<div class="grid-container">
-    <main class="main">
+<!-- <div class="grid-container">
+    <main> -->
+        <div class="main">
         <p>My name is Sergio Velasco, I was born in South America but
           moved to
           Miami, FL and raised there until I went to college in Gainesville, FL. Go Gators! I graduated from college
@@ -46,23 +47,26 @@
                     <img src="Media/img_0267_720.jpg" alt="img 1">
                     <img src="Media/img_0434_720.jpg" alt="img 2">
                     <img src="Media/IMG_0080.JPG" alt="img 3">
-                    <img src="Media/IMG_0082.jpg" alt="img 4">
-                    <img src="Media/IMG_0110.JPG" alt="img 5">
-                    <img src="Media/IMG_0184.jpeg" alt="img 6">
-                    <img src="Media/IMG_0267.JPG" alt="img 7">
-                    <img src="Media/IMG_0293.JPG" alt="img 8">
-                    <img src="Media/IMG_0311.JPG" alt="img 9">
-                    <img src="Media/IMG_0345.JPG" alt="img 10">
-                    <img src="Media/IMG_0403.jpeg" alt="img 11">
-                    <img src="Media/IMG_0687.jpg" alt="img 12">
-                    <img src="Media/IMG_1680.JPEG" alt="img 13">
-                    <img src="Media/IMG_8356.jpeg" alt="img 14">
-                    <img src="Media/IMG_9105.jpeg" alt="img 15">
+                    <img src="Media/IMG_0110.JPG" alt="img 4">
+                    <img src="Media/IMG_0184.jpeg" alt="img 5">
+                    <img src="Media/IMG_0267.JPG" alt="img 6">
+                    <img src="Media/IMG_0293.JPG" alt="img 7">
+                    <img src="Media/IMG_0311.JPG" alt="img 8">
+                    <img src="Media/IMG_0345.JPG" alt="img 9">
+                    <img src="Media/IMG_0403.jpeg" alt="img 10">
+                    <img src="Media/IMG_0687.jpg" alt="img 11">
+                    <img src="Media/IMG_1680.JPEG" alt="img 12">
+                    <img src="Media/IMG_8356.jpeg" alt="img 13">
+                    <img src="Media/IMG_9105.jpeg" alt="img 14">
                     <button id="prev">&lt;</button>
                     <button id="next">&gt;</button>
                 </div>
         </div>
-    </main>
+    </div>
+    <!-- </main> -->
+    <footer class="footer">
+        <span>&copy; Sergio Velasco. All Rights Reserved.</span>
+    </footer>
 </div>
 
 <script src="./script/webpage.js"></script>
