--- a/contact-me.html
+++ b/contact-me.html
@@ -52,6 +52,9 @@
             src="Media/twitch.png" id="social" alt="twitch icon"
             style="width: 60px; height: 60px; background-color: white;"></a>
     </div>
+    <footer class="footer">
+        <span>&copy; Sergio Velasco. All Rights Reserved.</span>
+    </footer>
     
     <script src="./script/webpage.js"></script>
 </body>
