--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           X(Twitter),
           Instagram, or LinkedIn.</p>
       </header>
-      <main class="main">
+      <main>
+        <div class="main">
+        <div class="main center">
         <h2>My Journey</h2>
         <p>My journey began in middle school when I started playing video games on PC's that required more help from
           other
@@ -52,23 +54,42 @@
           try
           practicing everything I've learned.
         </p>
+        </div>
 
-        <h2>Personal Achievements:</h2>
-        <ul>
-          <li>Although I dont use some of the knowledge I studied in college, it was still a big achievement being a
+        <div class="main right">
+          <h2>Projects</h2>
+          <div class="gallery">
+            <a target="_blank" href="https://svelasco14.github.io/dark-lightMode/"><img src="Media/dark&light.png" alt="screenshot of dark and light mode"></a>
+          <div class="cap"><h5>Dark and Light Mode</h5>Link to a small project I did in class with minimal integrations of Javascript to perform a swtich between Dark and Light modes.</div>
+          </div>
+          <div class="gallery">
+          <a target="_blank" href="https://svelasco14.github.io/issueLogger/"><img src="Media/issue.png" alt="screenshot of issue logger"></a>
+          <div class="cap"><h5>Issue Logger</h5>Link to a more complex project I completed in class using complex Javascript and API's to create an application to submit issue tickets. </div>
+          </div>
+          <div class="gallery">
+          <a target="_blank" href="https://svelasco14.github.io/triviaGame/"><img src="Media/trivia.png" alt="screenshot of trivia game"></a>
+          <div class="cap"><h5>Trivia Game</h5>Link to a Trivia Game I created in class in order to practice with complex Javascript methods, logic, and patterns.</div>
+          </div>
+        </div>
+
+          <div class="main left">
+            <h2>Personal Achievements:</h2>
+          <p>Although I dont use some of the knowledge I studied in college, it was still a big achievement being a
             first
-            generation college grad.</li>
-          <li>Going back to school to learn a completely different set of skills to start a new career.</li>
-          <li>I've learned to cover three different (PA) process assistant roles in the warehouse I work at so I'm
+            generation college grad.</p>
+          <p>Going back to school to learn a completely different set of skills to start a new career.</p>
+          <p>I've learned to cover three different (PA) process assistant roles in the warehouse I work at so I'm
             always
-            being called upon to figure something out.</li>
-          <li>I've had a Hole-in-one on a legit golf course. <a href="https://www.ironwoodgolfcourse.org/"
+            being called upon to figure something out.</p>
+          <p>I've had a Hole-in-one on a legit golf course. <a href="https://www.ironwoodgolfcourse.org/"
               target="_blank" alt="ironwood golf course">Ironwood Golf Course</a> (Gainesville, FL), Hole 14, 164 yards.
             Honestly, one of my
-            proudest achievements. </li>
-        </ul>
+            proudest achievements.</p>
+          </div>
+        </div>
       </main>
       <footer class="footer">
+        <span>&copy; Sergio Velasco. All Rights Reserved.</span>
       </footer>
     </div>
   </div>
