added calc project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
           <a target="_blank" href="https://svelasco14.github.io/triviaGame/"><img src="Media/trivia.png" alt="screenshot of trivia game"></a>
           <div class="cap"><h5>Trivia Game</h5>Link to a Trivia Game I created in class in order to practice with complex Javascript methods, logic, and patterns.</div>
           </div>
+          <div class="gallery">
+            <a target="_blank" href="https://svelasco14.github.io/calculator/"><img src="Media/calc.png" alt="screenshot of calculator app"></a>
+            <div class="cap"><h5>Calculator</h5>Link to a simple calculator application I created in class in order to practice with complex Javascript methods, logic, and patterns.</div>
+            </div>
         </div>
 
           <div class="main left">
